# sol-ez

./: .gitignore  Cargo.toml  LICENSE  README.md
examples/claim/: Cargo.toml  build.rs  contract.toml
examples/claim/benches/: compute_units.md  compute_units.rs  mollusk.rs
examples/claim/src/: claim.rs  claim_contract.rs  lib.rs
examples/claim/tests/: mod.rs
examples/counter/: Cargo.toml  build.rs
examples/counter/contracts/: counter.ez  counter.toml
examples/counter/src/: counter.rs  counter_contract.rs  lib.rs
src/sol-derive/: Cargo.toml
src/sol-derive/src/: lib.rs
src/sol-ez/: Cargo.toml
src/sol-ez/src/: account.rs  account_info.rs  context.rs  instruction_data.rs  lib.rs
src/sol-ez/src/account/: builder.rs  mod.rs  pda.rs  signer.rs
src/sol-gen/: Cargo.toml
src/sol-gen-common/: Cargo.toml
src/sol-gen-common/src/: config.rs  discriminator.rs  error.rs  lib.rs  my_idl.rs
src/sol-gen/src/: config.rs  discriminator.rs  error.rs  gen_contract.rs  lib.rs  my_idl.rs
src/sol-gen/src/ast/: account.rs  accounts.rs  contract.rs  message.rs  mod.rs
src/sol-gen/src/codegen/: contract.rs
src/sol-gen/src/parse/: lexer.rs  mod.rs  token.rs
src/sol-log-parser/: Cargo.toml
src/sol-log-parser/src/: lib.rs  parsed_log.rs  raw_log.rs
src/sol-log-parser/src/structured_log/: mod.rs  parsed.rs  raw.rs
src/sol-log-parser/tests/: mod.rs
