[workspace]
members = [
    "examples/counter",
    "src/sol-derive",
    "src/sol-ez",
    "src/sol-gen",
    "src/sol-gen-common",
]
resolver = "3"

[workspace.dependencies]
# local
sol-derive = { path = "src/sol-derive" }
sol-ez = { path = "src/sol-ez" }
sol-gen = { path = "src/sol-gen" }
sol-gen-common = { path = "src/sol-gen-common" }

# external
anyhow = "1.0"
borsh = "1.5"
pinocchio = "0.8"
pinocchio-system = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_path_to_error = "0.1"
sha2 = "0.10"
thiserror = "2.0"
toml = "0.8"

# code gen libs
convert_case = "0.8"
deluxe = "0.5"
prettyplease = "0.2"
proc-macro2 = "1.0"
quote = "1.0"
syn = "2.0"
