[package]
name = "claim"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
# local
sol-ez = { workspace = true }

# external
borsh = { workspace = true, features = ["derive"] }
pinocchio = { workspace = true }
pinocchio-log = "0.4"

[build-dependencies]
sol-gen = { workspace = true }

[features]
bpf = []

[dev-dependencies]
pinocchio = { workspace = true, features = ["test", "std"] }
pinocchio-system = { workspace = true }
# pinocchio-token-program = { git = "https://github.com/solana-program/token.git" }
