[package]
name = "claim"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[[bench]]
name = "compute_units"
harnes = false

[dependencies]
# local
sol-ez = { workspace = true }


# external
borsh = { workspace = true, features = ["derive"] }
pinocchio = { workspace = true }
pinocchio-pubkey = "0.2"

[build-dependencies]
sol-gen = { workspace = true }

[features]
bpf = []

[dev-dependencies]
sol-ez = { workspace = true, features = ["std"] }
sol-log-parser = { workspace = true }

chrono = "0.4"
mollusk-svm = { git = "https://github.com/redmannequin/mollusk.git", branch = "adds-cpi-cus-consumed-to-bench" }
mollusk-svm-bencher = { git = "https://github.com/redmannequin/mollusk.git", branch = "adds-cpi-cus-consumed-to-bench" }
num-format = "0.4"
solana-account = "2.2"
solana-instruction = "2.2"
solana-pubkey = "2.2"

pinocchio = { workspace = true, features = ["test"] }
pinocchio-system = { workspace = true }
# pinocchio-token-program = { git = "https://github.com/solana-program/token.git" }
