[package]
name = "sol-derive"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true

[dependencies]
# local
sol-gen-common = { workspace = true }

# external
deluxe = { workspace = true }
proc-macro2 = { workspace = true }
sha2 = { workspace = true }
syn = { workspace = true }
quote = { workspace = true }
