[package]
name = "sol-gen"
version = "0.1.0"
edition = "2024"

[dependencies]
# local
sol-derive = { workspace = true }

# external
anyhow = { workspace = true }
proc-macro2 = { workspace = true }
thiserror = { workspace = true }
sha2 = { workspace = true }

# code gen libs
convert_case = { workspace = true }
prettyplease = { workspace = true }
quote = { workspace = true }
syn = { workspace = true }
