[package]
name = "sol-gen"
version = "0.1.0"
edition = "2024"

[dependencies]
# local
sol-derive = { workspace = true }
sol-gen-common = { workspace = true }

# external
anyhow = { workspace = true }
proc-macro2 = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_path_to_error = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }
toml = { workspace = true }

# code gen libs
convert_case = { workspace = true }
prettyplease = { workspace = true }
quote = { workspace = true }
syn = { workspace = true }
